--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Hacker-Blog
-description: "A Jekyll Blog Theme For Hackers"
+title: di0n1xd blog
+description: "En esta web colgare todo lo que haga relacionado con ciberseguridad."
 author:
   name: "Denís López Alarcón"
-  email: "someone@somewebsite.somedomain"
-  url: "https://ashishchaudhary.in/hacker-blog"
+  email: "di0n1xd.oficial@gmail.com"
+  url: "https://github.com/di0n1xd/"
 
 baseurl: /
 
